# chefLM

./: .gitignore  LICENSE  README.md  installer.py  pyproject.toml  requirements-dev.txt  requirements.txt  run_cheflm.bat  train_chef.ipynb  use_chef.ipynb
.github/workflows/: ci.yml
chef/: __init__.py  __main__.py  config.py  data_utils.py  dataset.py  grammar.py  guardrails.py  inference.py  milkshake_data.py  model.py  persona.py  prepare_data.py  train.py
docs/: download.sh  index.html  tokenizer.json
static/: index.html  installer.html
tests/: test_config.py  test_grammar.py  test_guardrails.py  test_inference_module.py  test_milkshake_data.py  test_model.py  test_persona.py
tools/: export_model.py  export_onnx.py  make_colab.py  model_card.md
webui/: chef_server.py  installer.py
webui/static/: installer.html
