[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chef"
version = "0.1.0"
description = "ChefLM — a tiny milkshake-obsessed transformer language model"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.9"
authors = [{ name = "BT-Rajan" }]
dependencies = [
    "torch>=2.0.0",
    "tokenizers>=0.19.0",
    "tqdm>=4.65.0",
    "numpy>=1.24.0",
    "datasets>=2.14.0",
]

[project.optional-dependencies]
grammar = ["language-tool-python>=2.7.0"]
dev = ["pytest>=7.0.0", "language-tool-python>=2.7.0"]

[project.urls]
Homepage = "https://github.com/BT-Rajan/chefLM"

[tool.setuptools.packages.find]
include = ["chef*"]
